logs/ckanext-semantictags.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ckanext'...
Listing './lib/python3.5/site-packages/ckanext/semantictags'...
Compiling './lib/python3.5/site-packages/ckanext/semantictags/commands.py'...
***   File "./lib/python3.5/site-packages/ckanext/semantictags/commands.py", line 27
    print self.__doc__
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ckanext/semantictags/controller.py'...
***   File "./lib/python3.5/site-packages/ckanext/semantictags/controller.py", line 71
    print "fails"
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ckanext/semantictags/db.py'...
***   File "./lib/python3.5/site-packages/ckanext/semantictags/db.py", line 55
    print "xxx"
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ckanext/semantictags/templates'...
Listing './lib/python3.5/site-packages/ckanext/semantictags/templates/package'...
Listing './lib/python3.5/site-packages/ckanext/semantictags/templates/package/snippets'...
Listing './lib/python3.5/site-packages/ckanext/semantictags/templates/semantictags'...
Listing './lib/python3.5/site-packages/ckanext/semantictags/templates/semantictags/snippets'...
Listing './lib/python3.5/site-packages/ckanext/semantictags/templates/snippets'...
Listing './lib/python3.5/site-packages/ckanext/semantictags/tests'...
Listing './lib/python3.5/site-packages/ckanext_semantictags-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
